VSE python method add_effect isn't working correctly #43271

Closed
opened 2015-01-16 00:54:10 +01:00 by Philipp Hemmer · 6 comments

System Information
Is available in the test file as system-info.txt

Blender Version
Broken: 2.73

Short description of error
After adding a new effect strip to the vse via python the strip isn't inserted correctly. It's displayed only as a line (length=0, but it has a length) and hasn't any effect.

Exact steps for others to reproduce the error

**System Information** Is available in the test file as system-info.txt **Blender Version** Broken: 2.73 **Short description of error** After adding a new effect strip to the vse via python the strip isn't inserted correctly. It's displayed only as a line (length=0, but it has a length) and hasn't any effect. **Exact steps for others to reproduce the error** - Open the uploaded .blend file ([bugreport_new_effect_method.blend](https://archive.blender.org/developer/F137354/bugreport_new_effect_method.blend)). - 'Run script' in the left text editor
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @hapit

Added subscriber: @hapit
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Bastien Montagne self-assigned this 2015-01-16 10:22:18 +01:00

This issue was referenced by blender/blender@fd58f5ac9d

This issue was referenced by blender/blender@fd58f5ac9dc75d0d90b4a885329c3a26959ccbd7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit blender/blender@fd58f5ac9d.

Closed by commit blender/blender@fd58f5ac9d.
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#43271
No description provided.