Fix T43271: Sequencer: RNA's 'add_effect' was not updating effect strip len correctly.